--- a/juego_pptls/templates/juego_pptls/base.html
+++ b/juego_pptls/templates/juego_pptls/base.html
@@ -11,28 +11,23 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand">Piedra, Papel, Tijera, Lagarto o Spock?</a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarSupportContent">
-                <ul class="navbar-nav mr-auto">
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                          <a class="nav-link" href="/lobby/">Lobby</a></li>
-                        <li class="nav-item">
-                          ><a class="nav-link" href="/logout/">Logout</a></li>
-                    {% else %}
-                        <li class="nav-item">
-                          ><a class="nav-link" href="/register/">Register</a></li>
-                        <li class="nav-item">
-                          ><a class="nav-link" href="/login/">Login</a></li>
-                    {% endif %}
-                </ul>
+        <a class="navbar-brand">Piedra, Papel, Tijera, Lagarto o Spock?</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="colapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav">
                 {% if request.user.is_authenticated %}
-                <p class="navbar-text pull-right">Hi, {{ request.user }}</p>
+                    <a class="nav-link" href="/lobby/">Lobby</a></li>
+                    <a class="nav-link" href="/logout/">Logout</a></li>
+                {% else %}
+                    <a class="nav-link" href="/registro/">Register</a></li>
+                    <a class="nav-link" href="/login/">Login</a></li>
                 {% endif %}
             </div>
+            {% if request.user.is_authenticated %}
+            <p class="navbar-text pull-right">Hi, {{ request.user }}</p>
+            {% endif %}
         </div>
     </nav>
     <div class="container" style="margin-bottom:50px;">
